<resources>
    <string name="app_name" translatable="false">spacexTimes</string>
    <string name="notifications_channel" translatable="false">spacexTimes</string>
    <string name="notifications_id" translatable="false">spacex</string>
    <string name="notifications_description" translatable="false">Notify from SpaceX Times app</string>
    <string name="capsulesTitle">Капсулы</string>
    <string name="crewTitle">Экипажи</string>
    <string name="coresTitle">Ускорители</string>
    <string name="dragonsTitle">Dragon</string>
    <string name="rocketsTitle">Ракеты</string>
    <string name="launchPadsTitle">Зоны запуска</string>
    <string name="landingPadsTitle">Зоны посадки</string>
    <string name="launchesTitle">Запуски</string>
    <string name="searchTitle">Поиск по названию</string>
    <string name="aiTranslateTitle">Машинный перевод</string>
    <string name="filter_menu_item">Фильтр</string>
    <string name="sync_menu_item">Обновление</string>
    <string name="loadingText">загрузка…</string>


<!--    Preferences screen-->
    <string name="preferencesTitle">Настройки</string>
    <string name="experimentalTitle">Экспериментально!</string>
    <string name="aiTranslateOffText">Машинный перевод отключен. Включение машинного перевода позволит перевести английский текст в описании, но не обязательно будет на 100% корректный! Аббревиатуры и прочие технические словечки могут быть переведены с ошибками.</string>
    <string name="aiTranslateOnText" translatable="false">Перевод осуществляется сервисом https://fasttranslator.herokuapp.com\nУ сервиса имеется ограничение на бесплатный перевод по количеству запросов и их размеру в час с одного ip.</string>
    <string name="synchronizeTitle">Синхронизация</string>
    <string name="refreshIntervalTitle">Частота синхронизации</string>
    <string name="refreshSummary">Определяет в часах интервал, по истечении которого данные будут обновляться из сети при очередном отображении.</string>
    <string name="uiTitle">Интерфейс</string>
    <string name="openNextAtStartText">Открывать на ближайшем запуске</string>
    <string name="openNextOnText">Список запусков будет всегда открываться на ближайшем запуске</string>
    <string name="openNextOffText">Список запусков будет открываться, отсортированный от новых к старым</string>
    <string name="widePaddingText">Увеличенные отступы от края экрана</string>
    <string name="widePaddingSummary">Добавляет отступы слева и справа для удобства на некоторых типах экранов</string>



    <string name="agreeText">Да</string>
    <string name="cancelText">Отмена</string>
    <string name="unknownText">неизвестно</string>
    <string name="activeText">действует</string>
    <string name="inactiveText">не действует</string>
    <string name="retiredText">на восстановлении</string>
    <string name="destroyedText">уничтожена</string>
    <string name="reuseText">"повторно "</string>
...
    <string name="capsule_thruster_line2">топливо: %1$s, окислитель: %2$s</string>
    <string name="preview_of_rocket_string" translatable="false">preview of rocket</string>
    <string name="patch_preview_description" translatable="false">official patch of launch</string>
    <string name="saved_image_notification">Изображение сохранено</string>
    <string name="saved_image_text_notification">Нажмите, чтобы открыть в галерее или редакторе.</string>
    <string name="saving_title_string">Сохранение</string>
    <string name="save_image_dialog_string">Скачать фото в галерею?</string>
    <string name="failed_image_save_string">Сохранение не удалось!</string>
    <string name="quarter1_string">"I четверть "</string>
    <string name="quarter2_string">"II четверть "</string>
    <string name="quarter3_string">"III четверть "</string>
    <string name="quarter4_string">"IV четверть "</string>
    <string name="half1_string">"первая половина "</string>
    <string name="half2_string">"вторая половина "</string>
    <string name="to_be_determined_string">не определена</string>
    <string name="not_early_string">"не ранее "</string>
    <string name="description_of_the_page_text" translatable="false">description of the page</string>
    <string name="missions_list_header">Участие в миссиях:</string>
    <string name="core_not_fly_text">Этот ускоритель еще не летал</string>
    <string name="historyEventsTitle">Исторические события</string>
    <string name="payloadsTitle">Полезная нагрузка</string>
    <string name="open_event_web_link">Открыть подробности</string>
    <string name="rocket_size_caption">Высота, диаметр и масса</string>
    <string name="rocket_size_string">"↕ %1$.1f м ⌀ %2$.1f м ⚖ %3$d т"</string>
    <string name="stages_count_string">ступеней</string>
    <string name="boosters_count_string">боковых ускорителей</string>
...
        <item quantity="other">Назначенные капсулы</item>
    </plurals>
    <string name="assigned_launch_pad_caption">Стартовая площадка</string>
    <string name="failures_list_caption">Неисправности миссии</string>
    <string name="failure_time_altitude_text">Время: %1$d сек, высота: %2$d км</string>
    <string name="failure_reason_text">Причина: %1$s</string>
    <string name="launch_number_caption">Запуск</string>
    <string name="static_fire_date_caption">Дата прожига</string>
    <string name="launch_date_caption">Дата запуска</string>
    <string name="launch_window_caption">Окно для запуска</string>
    <string name="zero_window_caption">мгновенное</string>
    <string name="landing_attempts_caption">Сведения о посадке:&#160;</string>
    <string name="landing_success_string">успешно (на %s)</string>
...
