<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable name="spaceXViewModel" type="ru.alexmaryin.spacextimes_rx.ui.view.viewmodel.SpaceXViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/rootLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.view.activities.MainActivity">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"
            tools:listitem="@layout/launch_item">

        </androidx.recyclerview.widget.RecyclerView>

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/filterGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:animateLayoutChanges="true"
            android:background="#551F1B24"
            android:visibility="gone"
            app:layout_insetEdge="top"
            tools:visibility="visible">
        </com.google.android.material.chip.ChipGroup>

        <include
            android:id="@+id/shimmerLayout"
            layout="@layout/main_recycler_shimmer"
            tools:visibility="visible" />

        <include
            android:id="@+id/emptyListMessage"
            layout="@layout/empty_list_message"
            tools:visibility="gone" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>