...
        android:layout_height="wrap_content"
        android:background="@color/unknown_color"
        android:paddingHorizontal="?attr/horizontalPadding"
        android:paddingVertical="5dp">

        <TextView
            android:id="@+id/launchName"
            style="@style/boldCaption"
            android:onClick="@{() -> clickListener.onClick(launch.id, ItemTypes.LAUNCH)}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{launch.name}"
            app:layout_constraintEnd_toStartOf="@+id/patchImage"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Starlink-27" />

        <ImageView
...
