...
        android:icon="@drawable/ic_outline_search_24"
        android:title="@string/searchTitle"
        app:showAsAction="collapseActionView|always"
        app:actionViewClass="androidx.appcompat.widget.SearchView"/>

    <item
        android:id="@+id/filterAction"
        android:icon="@drawable/ic_filter"
        android:title="@string/filter_menu_item" app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/syncAction"
        android:icon="@drawable/ic_outline_autorenew_24"
...
